<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BarTabActivity" >

    <Button
        android:id="@+id/closeButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/payButton"
        android:onClick="exit"
        android:text="Close" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="payTab"
        android:text="Pay Tab" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/closeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView8" >
         
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_above="@+id/closeButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView8"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonNewScan"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/scrollView1"
            android:layout_marginTop="2dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TableLayout
                    android:id="@+id/data_table"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:minWidth="50dp"
                            android:text="@string/th_index" />

                        <TextView
                            android:layout_width="100dp"
                            android:minWidth="755dp"
                            android:text="@string/th_drink_name" />

                        <TextView
                            android:layout_width="50dp"
                            android:minWidth="125dp"
                            android:text="@string/th_acvol" />

                        <TextView
                            android:layout_width="70dp"
                            android:minWidth="80dp"
                            android:text="@string/th_cost" />

                        <TextView
                            android:layout_width="80dp"
                            android:minWidth="80dp"
                            android:text="@string/th_ordtime" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tabTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:text="$Total" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollView1"
        android:layout_alignLeft="@+id/payButton"
        android:layout_marginLeft="37dp"
        android:text="Tab Total: " />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Current Tab" />

</RelativeLayout>